--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,25 @@
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
+
+// @import "variables";
+
+.btn-primary {
+    color: #fff;
+    background-color: #5856d6;
+    border-color: #5856d6;
+}
+
+// .btn-primary:hover {
+//   color: #fff;
+//   background-color: #5856d6;
+//   border-color: #5856d6;
+// }
+
+// .btn-primary:focus,
+// .btn-primary.focus {
+//   color: #fff;
+//   background-color: #5856d6;
+//   border-color: #5856d6;
+//   box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+// }
