--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -48,7 +48,8 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
  
-$primary:       #78C2AD !default;
+$primary:       #1eacc7 !default;
+// $primary:       #78C2AD !default;
 $secondary:     #F3969A !default;
 $success:       $green !default;
 $info:          $cyan !default;
