--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -48,9 +48,13 @@ $green:   #56CC9D !default;
 $teal:    #20c997 !default;
 $cyan:    #6CC3D5 !default;
  
-$primary:       #1eacc7 !default;
+// $primary:       #1eacc7 !default;
+$primary:       #3acae6 !default;
 // $primary:       #78C2AD !default;
-$secondary:     #F3969A !default;
+// $secondary:     #5856D6 !default;
+$secondary:     #5865f5 !default;
+// $secondary:     #6481f2 !default;
+// $secondary:     #F3969A !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -97,10 +101,6 @@ $yiq-contrasted-threshold: 250 !default;
 $body-color:                $gray-600 !default;
  
 // Components
-
-.btn-primary {
-    background-color: $primary;
-}
 
 $border-radius:               .4rem !default;
 $border-radius-lg:            .6rem !default;
