--- a/Client/resources/sass/app.scss
+++ b/Client/resources/sass/app.scss
@@ -4,6 +4,11 @@
 @import "variables";
 @import "~bootstrap/scss/bootstrap";
 
+// OverlayScrollbars
+@import '~overlayscrollbars/css/OverlayScrollbars.css';
+
+@import "~admin-lte/dist/css/adminlte.css";
+
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
