Booking form step 1-2 changed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -48706,6 +48706,12 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
+.fa:hover,
+.fas:hover,
+.far:hover {
+  color: #504e4e;
+}
+
 .laravel-box-shadow {
   box-shadow: 0 20px 30px -16px rgba(9, 9, 16, 0.2);
 }
