--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,7 +23,9 @@
 .far:hover {
     color: #504e4e;
 }
-
+.grab {
+    cursor: grab;
+}
 .laravel-box-shadow {
     box-shadow: 0 20px 30px -16px rgba(9, 9, 16, 0.2);
 }
