--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -142,7 +142,8 @@ a:hover {
 }
 
 /* Booking form bigger text problem */
-.vs__search, .vs__search:focus {
+.vs__search,
+.vs__search:focus {
     /* position: absolute; */
     margin: 0px !important;
 }
@@ -157,8 +158,14 @@ a:hover {
 .vs__selected {
     z-index: 2 !important;
 }
+.vs__dropdown-toggle {
+    padding: 0 !important;
+}
 @media only screen and (max-width: 450px) {
     .selected.d-center {
         max-width: 75px;
     }
+}
+.mx-input {
+    font-size: 1em !important;
 }
