Return Booking Toggle Button

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,10 +47,10 @@
     width: 100% !important;
 }
 
-.btn:hover {
-    transition: all 0.2s ease-in-out;
-    transform: scale(1.05);
-}
+// .btn:hover {
+//     transition: all 0.2s ease-in-out;
+//     transform: scale(1.05);
+// }
 
 .btn-primary {
     background-color: $primary;
