--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -168,4 +168,11 @@ a:hover {
 }
 .mx-input {
     font-size: 1em !important;
+    box-shadow: none;
+    height: 37px;
+}
+@media only screen and (max-width: 385px) {
+    .toggle-wrapper {
+        padding-left: 0px !important;
+    }
 }
