--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -154,12 +154,19 @@ a:hover {
     max-width: 180px;
     position: absolute;
     z-index: 2 !important;
+    padding-bottom: 2px;
 }
 .vs__selected {
     z-index: 2 !important;
 }
 .vs__dropdown-toggle {
     padding: 0 !important;
+}
+.vs__actions {
+    padding: 2px 3px 0 3px !important;
+}
+.header-right .form-control {
+    padding: 0.575rem 0.575rem 10px !important;
 }
 @media only screen and (max-width: 450px) {
     .selected.d-center {
