--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -50,6 +50,7 @@ $cyan:    #6CC3D5 !default;
  
 // $primary:       #1eacc7 !default;
 $primary:       #3acae6 !default;
+$primary-light: #c0e0e669 !default;
 // $primary:       #78C2AD !default;
 // $secondary:     #5856D6 !default;
 $secondary:     #5865f5 !default;
@@ -59,6 +60,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
+$danger-light: #fbe2dab3 !default;
 $light:         $gray-100 !default;
 $dark:          $gray-800 !default;
  
