Yajra Laravel Datatables

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,10 @@
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
+// DataTables
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
+@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.css";
+
 // .mx-calendar {
 //   width: 375px !important;
 // }
