File System, UI Fixes before server push

--- a/public/css/theme/main.css
+++ b/public/css/theme/main.css
@@ -2543,7 +2543,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .banner-area .overlay-bg {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgb(0 0 0 / 75%);
 }
 
 @media (max-width: 767px) {
