--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -7,3 +7,7 @@
 .brand-link .brand-image {
     margin-left: 0 !important;
 }
+.user-panel .image {
+    display: inline-block;
+    padding-left: 0.5rem !important;
+}
