--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -183,3 +183,33 @@ a:hover {
         padding-left: 0px !important;
     }
 }
+body {
+    padding: 0 60px;
+}
+nav {
+    background-color: black !important;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+#app {
+    box-shadow: 0px 2px 10px #999999a3;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+@media only screen and (max-width: 768px) {
+    body {
+        padding: 0;
+    }
+    nav {
+        border-radius: 0;
+    }
+    #app{
+        border-radius: 0;
+    }
+}
+  
+@media only screen and (max-width: 575px) {
+    .contact-wrapper{
+        margin-left: 8.3333333333%;
+    }
+}
