Contact Us, Ticket Name, CSS Issues

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -30,7 +30,7 @@ p.mt-80.mx-auto.footer-text.col-lg-12 {
 }
 
 .section-gap {
-    padding: 50px 0;
+    padding: 50px 25px;
 }
 
 /* Start Navbar Section  */
