--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -151,10 +151,13 @@ a:hover {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: 180px;
+    /* max-width: 180px; */
     position: absolute;
     z-index: 2 !important;
     padding-bottom: 2px;
+}
+.vs__selected-options {
+    overflow: hidden;
 }
 .vs__selected {
     z-index: 2 !important;
