--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -206,13 +206,34 @@ nav {
     nav {
         border-radius: 0;
     }
-    #app{
+    #app {
         border-radius: 0;
     }
 }
-  
+
 @media only screen and (max-width: 575px) {
-    .contact-wrapper{
+    .contact-wrapper {
         margin-left: 8.3333333333%;
     }
+}
+
+.profile-image-button {
+    width: 70%;
+}
+
+.box-body.box-profile.d-flex-column {
+    background-color: #f3f3f3eb;
+    box-shadow: 0px 2px 10px #999999a3;
+    background-color: #fdfdfd96;
+    border-radius: 5px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.edit-profile {
+    background-color: #f3f3f3eb;
+    box-shadow: 0px 2px 10px #999999a3;
+    background-color: #fdfdfd96;
+    border-radius: 5px;
+    padding: 30px 50px;
 }
